change server to github

--- a/index.html
+++ b/index.html
@@ -6,32 +6,32 @@
 
     <title>Depression Medication Choice</title>
 
-    <!-- build:css /assets/css/main.css -->
-    <link rel="stylesheet" href="/bower_components/reset-css/reset.css"/>
-    <link rel="stylesheet" href="/assets/css/fontello.css"/>
-    <link rel="stylesheet" href="/assets/css/styles.css" media="screen"/>
+    <!-- build:css ./assets/css/main.css -->
+    <link rel="stylesheet" href="./bower_components/reset-css/reset.css"/>
+    <link rel="stylesheet" href="./assets/css/fontello.css"/>
+    <link rel="stylesheet" href="./assets/css/styles.css" media="screen"/>
     <!-- endbuild -->
 
-    <!-- build:css /assets/css/print.css -->
-    <link rel="stylesheet" href="/assets/css/print.css" media="print"/>
+    <!-- build:css ./assets/css/print.css -->
+    <link rel="stylesheet" href="./assets/css/print.css" media="print"/>
     <!-- endbuild -->
 
 </head>
 <body>
 <div class="page-main" id="page-main"></div>
 
-<!-- build:js /assets/js/plugins.js -->
-<script src="/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="/bower_components/js-cookie/src/js.cookie.js"></script>
-<script src="/bower_components/ki-router/dist/ki-router.js"></script>
-<script src="/bower_components/noty/js/noty/jquery.noty.js"></script>
-<script src="/bower_components/noty/js/noty/layouts/topRight.js"></script>
-<script src="/bower_components/fastclick/lib/fastclick.js"></script>
+<!-- build:js ./assets/js/plugins.js -->
+<script src="./bower_components/jquery/dist/jquery.min.js"></script>
+<script src="./bower_components/js-cookie/src/js.cookie.js"></script>
+<script src="./bower_components/ki-router/dist/ki-router.js"></script>
+<script src="./bower_components/noty/js/noty/packaged/jquery.noty.packaged.min.js"></script>
+<script src="./bower_components/noty/js/noty/layouts/topRight.js"></script>
+<script src="./bower_components/fastclick/lib/fastclick.js"></script>
 <!-- endbuild -->
-<!-- build:js /assets/js/main.js -->
-<script src="/assets/js/theme.js"></script>
-<script src="/tpl/build/template.js"></script>
-<script src="/assets/js/main.js"></script>
+<!-- build:js ./assets/js/main.js -->
+<script src="./assets/js/theme.js"></script>
+<script src="./tpl/build/template.js"></script>
+<script src="./assets/js/main.js"></script>
 <!-- endbuild -->
 
 </body>
